--- a/src/problem2/index.html
+++ b/src/problem2/index.html
@@ -1,27 +1,103 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fancy Form</title>
-
-  <!-- You may add more stuff here -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Crypto Swap</title>
   <link href="style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 </head>
-
 <body>
+  <div class="container">
+    <div class="swap-card">
+      <div class="swap-header">
+        <h2>Swap Tokens</h2>
+        <div class="settings">
+          <button id="settings-btn" class="icon-btn">
+            <i class="bi bi-gear"></i>
+          </button>
+        </div>
+      </div>
+      
+      <div class="swap-body">
+        <div class="swap-form">
+          <!-- From section -->
+          <div class="swap-input-container">
+            <div class="swap-label">
+              <span>You pay</span>
+              <span class="balance" id="from-balance">Balance: 0.00</span>
+            </div>
+            <div class="swap-input">
+              <input type="number" id="input-amount" placeholder="0.00" min="0" step="0.01">
+              <button class="max-btn" id="max-btn">MAX</button>
+              <div class="token-selector" id="from-token-selector">
+                <img id="from-token-img" src="https://raw.githubusercontent.com/Switcheo/token-icons/main/tokens/ETH.svg" alt="ETH">
+                <span id="from-token-name">ETH</span>
+                <i class="bi bi-chevron-down"></i>
+              </div>
+            </div>
+            <div class="error-message" id="input-error"></div>
+          </div>
 
-  <!-- You may reorganise the whole HTML, as long as your form achieves the same effect. -->
-  <form onsubmit="return !1">
-    <h5>Swap</h5>
-    <label for="input-amount">Amount to send</label>
-    <input id="input-amount" />
+          <!-- Swap icon -->
+          <div class="swap-icon-container">
+            <button id="swap-direction-btn" class="swap-icon">
+              <i class="bi bi-arrow-down-up"></i>
+            </button>
+          </div>
 
-    <label for="output-amount">Amount to receive</label>
-    <input id="output-amount" />
+          <!-- To section -->
+          <div class="swap-input-container">
+            <div class="swap-label">
+              <span>You receive</span>
+              <span class="balance" id="to-balance">Balance: 0.00</span>
+            </div>
+            <div class="swap-input">
+              <input type="number" id="output-amount" placeholder="0.00" min="0" step="0.01" readonly>
+              <div class="token-selector" id="to-token-selector">
+                <img id="to-token-img" src="https://raw.githubusercontent.com/Switcheo/token-icons/main/tokens/SWTH.svg" alt="SWTH">
+                <span id="to-token-name">SWTH</span>
+                <i class="bi bi-chevron-down"></i>
+              </div>
+            </div>
+          </div>
 
-    <button>CONFIRM SWAP</button>
-  </form>
+          <!-- Exchange rate info -->
+          <div class="rate-info">
+            <div class="rate">
+              <span>Exchange Rate:</span>
+              <span id="exchange-rate">1 ETH = 0 SWTH</span>
+            </div>
+            <div class="slippage">
+              <span>Slippage Tolerance:</span>
+              <span id="slippage-value">0.5%</span>
+            </div>
+          </div>
+        </div>
+
+        <button id="swap-btn" class="swap-btn" disabled>Connect Wallet</button>
+      </div>
+    </div>
+
+    <!-- Token selection modal -->
+    <div id="token-modal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3>Select a token</h3>
+          <button id="close-modal" class="close-btn">&times;</button>
+        </div>
+        <div class="modal-search">
+          <i class="bi bi-search"></i>
+          <input type="text" id="token-search" placeholder="Search token name or paste address">
+        </div>
+        <div class="token-list" id="token-list">
+          <!-- Tokens will be dynamically added here -->
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
-
 </html>
